--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "4.3.1",
-    "react-quill": "^1.3.5",
+    "react-quill": "1.3.5",
     "react-redux": "7.2.6",
     "react-router-dom": "6.2.1",
     "react-thunk": "1.0.0",
@@ -23,12 +23,12 @@
     "redux": "4.1.2"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "1.0.7",
+    "@vitejs/plugin-react": "1.1.4",
     "autoprefixer": "10.4.2",
     "postcss": "8.4.5",
     "standard": "16.0.4",
     "tailwindcss": "3.0.17",
-    "vite": "2.7.2"
+    "vite": "2.7.13"
   },
   "eslintConfig": {
     "extends": [
