--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@mui/material": "5.3.1",
     "axios": "0.25.0",
     "firebase": "9.6.4",
+    "leaflet": "^1.7.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "4.3.1",
+    "react-leaflet": "^3.2.5",
     "react-quill": "1.3.5",
     "react-redux": "7.2.6",
     "react-router-dom": "6.2.1",
