--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "react-quill": "1.3.5",
     "react-redux": "7.2.6",
     "react-router-dom": "6.2.1",
-    "react-thunk": "1.0.0",
     "react-toastify": "8.1.0",
-    "redux": "4.1.2"
+    "redux": "4.1.2",
+    "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "1.1.4",
