--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-router-dom": "6.2.1",
     "react-thunk": "1.0.0",
     "react-toastify": "8.1.0",
-    "redux": "4.1.2"
+    "redux": "4.1.2",
+    "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "1.1.4",
