--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/styled": "11.6.0",
     "@mui/icons-material": "^5.3.1",
     "@mui/material": "5.3.1",
+    "@mui/styles": "^5.3.0",
     "axios": "0.25.0",
     "firebase": "9.6.4",
     "react": "17.0.2",
