--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/material": "5.3.1",
     "@mui/styles": "^5.3.0",
     "axios": "0.25.0",
+    "dotenv": "^15.0.0",
     "firebase": "9.6.4",
     "leaflet": "^1.7.1",
     "leaflet-geosearch": "^3.6.0",
