--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-thunk": "1.0.0",
     "react-toastify": "8.1.0",
     "redux": "4.1.2",
-    "redux-thunk": "^2.4.1"
+    "redux-thunk": "^2.4.1",
+    "@mui/styles": "^5.3.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "1.1.4",
