--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-router-dom": "6.2.1",
     "react-toastify": "8.1.0",
     "redux": "4.1.2",
-    "redux-thunk": "^2.4.1"
+    "redux-thunk": "^2.4.1",
+    "sweetalert2": "^11.3.10"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "1.1.4",
