cambios en CI CD

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,31 +1,31 @@
-name: App CI
+# name: App CI
 
-on:
-  push:
-    branches:
-      - main 
+# on:
+#   push:
+#     branches:
+#       - main 
 
-env:
-    VITE_API_KEY: ${{ secrets.VITE_API_KEY }}
-    VITE_AUTH_DOMAIN: ${{ secrets.VITE_AUTH_DOMAIN }}
-    VITE_APP_DATABASE_URL: ${{ secrets.VITE_APP_DATABASE_URL }}
-    VITE_PROJECT_ID: ${{ secrets.VITE_PROJECT_ID }}
-    VITE_STORAGE_BUCKET: ${{ secrets.VITE_STORAGE_BUCKET }}
-    VITE_MESSAGING_SENDER_ID: ${{ secrets.VITE_MESSAGING_SENDER_ID }}
-    VITE_APP_ID: ${{ secrets.VITE_APP_ID }}
+# env:
+#     VITE_API_KEY: ${{ secrets.VITE_API_KEY }}
+#     VITE_AUTH_DOMAIN: ${{ secrets.VITE_AUTH_DOMAIN }}
+#     VITE_APP_DATABASE_URL: ${{ secrets.VITE_APP_DATABASE_URL }}
+#     VITE_PROJECT_ID: ${{ secrets.VITE_PROJECT_ID }}
+#     VITE_STORAGE_BUCKET: ${{ secrets.VITE_STORAGE_BUCKET }}
+#     VITE_MESSAGING_SENDER_ID: ${{ secrets.VITE_MESSAGING_SENDER_ID }}
+#     VITE_APP_ID: ${{ secrets.VITE_APP_ID }}
 
-jobs:
-  deploy:
-    runs-on: ubuntu-18.04
-    steps:
-      - uses: actions/checkout@v2
-      - run: yarn
-      - run: yarn build
-      - name: Deploy
-        uses: FirebaseExtended/action-hosting-deploy@v0
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist
-          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_PARCHES }}'
-          channelId: live
-          projectId: parches-84287
+# jobs:
+#   deploy:
+#     runs-on: ubuntu-18.04
+#     steps:
+#       - uses: actions/checkout@v2
+#       - run: yarn
+#       - run: yarn build
+#       - name: Deploy
+#         uses: FirebaseExtended/action-hosting-deploy@v0
+#         with:
+#           github_token: ${{ secrets.GITHUB_TOKEN }}
+#           publish_dir: ./dist
+#           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_PARCHES }}'
+#           channelId: live
+#           projectId: parches-84287
